src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey_4/InvalidUnexpectedTranslationKey_4.php
<?php

namespace Invalid\UnexpectedTranslationKey_4;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey_4 extends ClarolinePlugin
{
    public function getDescriptionTranslationKey()
    {
        return new \DOMDocument();
    }
}